Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40798

Setting a new contextObject on a QQmlContext does not update bindings

    XMLWordPrintable

Details

    • 672c533bde2899baad3eb29b6a807870abb8bf25

    Description

      The documentation states, "Setting the context object or adding new context properties after an object has been created in that context is an expensive operation (essentially forcing all bindings to reevaluate)," which implies that switching to a new contextObject should update any bindings on the context. This is not the case. Only objects created in the context after the contextObject has been set will reflect the properties of the new contextObject.

      Attachments

        For Gerrit Dashboard: QTBUG-40798
        # Subject Branch Project Status CR V

        Activity

          People

            apmontgo Alex Montgomery
            apmontgo Alex Montgomery
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes